fixing spacing for more analyses

--- a/src/page-sections/home/more-analyses-tiles/more-analyses-tiles.module.scss
+++ b/src/page-sections/home/more-analyses-tiles/more-analyses-tiles.module.scss
@@ -36,46 +36,28 @@ $darkGrey: #666666;
   }
 }
 
-@media (min-width: $tablet) and (max-width: $desktop - 1) {
-  .tile {
-    border-bottom: unset;
-  }
-}
 
-@media (max-width: $tablet - 1) {
+@media (max-width: $tablet) {
   .heading {
     border-bottom: 1px solid $font-body-copy;
   }
-}
 
-
-@media screen and (max-width: $desktop-xl) {
   .tile {
-    padding-bottom: $reset-override;
     border-bottom: 1px solid #ddd;
-    margin-bottom: $margin * 2;
+
+    .tile-heading {
+      width: 50%;
+      float: right;
+
+      .title, .subtitle {
+        text-align: right;
+      }
+    }
+
+    .image {
+      width: 50%;
+      float: left;
+    }
   }
 
-  .title {
-    padding-bottom: 0;
-  }
-
-  .subtitle {
-    padding-bottom: 0;
-  }
-
-  .tile {
-    padding-bottom: $margin * 2;
-  }
-
-  .image__container {
-    padding: $reset-override;
-  }
 }
-
-@media screen and (min-width: $desktop-xl) {
-  .tile {
-    padding-right: $reset-override;
-  }
-}
-
